# SmartKeyboard

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.txt
app/src/androidTest/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/libwnnDictionary/: OpenWnnDictionaryImplJni.c  OpenWnnJni.h  jp_co_omronsoft_openwnn_OpenWnnDictionaryImplJni.h
app/src/main/cpp/smartkbd/: basechars.h  com_dexilog_smartkeyboard_BinaryDictionary.cpp  dictionary.cpp  dictionary.h  expandable_dic.cpp  expandable_dic.h  lowerchars.h
app/src/main/res/color/: setup_step_action_background.xml  setup_step_action_color.xml
app/src/main/res/drawable/: android_btn_keyboard_key.xml  btn_close.xml  galaxy_btn_key.xml  galaxy_btn_mod_key.xml  gb_btn_keyboard_key.xml  gb_btn_keyboard_mod_key.xml  htc_btn_alt.xml  htc_btn_key.xml  ic_suggest_scroll_background.xml  iphone_btn_keyboard_key.xml  keyboard_key_feedback.xml  popup_bg.xml  transparent_btn_keyboard_key.xml
app/src/main/res/layout/: autotext_add.xml  autotext_editor.xml  calibration.xml  calibration_done.xml  candidate_preview.xml  edit_domain.xml  edit_smiley.xml  input.xml  key_height.xml  keyboard_key_preview.xml  keyboard_popup_keyboard.xml  main.xml  preference_icon.xml  recognition_status.xml  setup_start_indicator_label.xml  setup_step.xml  setup_steps_cards.xml  setup_steps_screen.xml  setup_steps_title.xml  setup_wizard.xml  skin_item.xml  skin_list.xml  userdic_add.xml  userdic_editor.xml
app/src/main/res/values-af/: strings.xml
app/src/main/res/values-am/: strings.xml
app/src/main/res/values-ar/: arrays.xml  strings.xml
app/src/main/res/values-az-rAZ/: strings.xml
app/src/main/res/values-bg/: arrays.xml  strings.xml
app/src/main/res/values-bn-rBD/: strings.xml
app/src/main/res/values-ca/: arrays.xml  strings.xml
app/src/main/res/values-cs/: arrays.xml  strings.xml
app/src/main/res/values-da/: arrays.xml  strings.xml
app/src/main/res/values-de/: arrays.xml  strings.xml
app/src/main/res/values-el/: arrays.xml  strings.xml
app/src/main/res/values-en-rAU/: strings.xml
app/src/main/res/values-es-rES/: arrays.xml  strings.xml
app/src/main/res/values-et-rEE/: strings.xml
app/src/main/res/values-eu-rES/: strings.xml
app/src/main/res/values-fa/: arrays.xml  strings.xml
app/src/main/res/values-fi/: arrays.xml  strings.xml
app/src/main/res/values-fr/: arrays.xml  strings.xml
app/src/main/res/values-fr-rCA/: strings.xml
app/src/main/res/values-gl-rES/: strings.xml
app/src/main/res/values-hi/: arrays.xml  strings.xml
app/src/main/res/values-hr/: arrays.xml  strings.xml
tools/: copy_string.sh  (+4 more)
(+434 files in other folders)
